# seqdupes

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: main.rs  process.rs
tests/: integration_test.rs
tests/fixtures/: all_dupes.fasta  header_dupes.fasta  no_dupes.fasta  simple.fasta  simple.fastq
