[package]
name = "seqdupes"
version = "0.2.0"
authors = ["Steven Weaver <steven@stevenweaver.org>"]
edition = "2018"
license = "MIT"
description = "Compress sequence duplicates"
repository = "https://github.com/stevenweaver/seqdupes"
homepage = "https://stevenweaver.org"
keywords = ["fastq", "fasta"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.7"
serde_json = "1.0.99"
tera = "1.6.1"
chrono = "0.4.38"
reqwest = "0.11.27"
rustc-hash = "1.1.0"
itertools = "0.13.0"
regex = "1"
bio = "1.6.0"

[[bin]]
name = "seqdupes"
path = "src/main.rs"

[profile.release]
lto = "fat"
codegen-units = 1
debug = 1
