[package]
name = "seqdupes"
version = "0.2.0"
authors = ["Steven Weaver <steven@stevenweaver.org>"]
edition = "2018"
license = "MIT"
description = "Compress sequence duplicates"
repository = "https://github.com/stevenweaver/seqdupes"
homepage = "https://stevenweaver.org"
keywords = ["fastq", "fasta"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.43"
serde_json = "1.0.142"
tera = "1.17.1"
chrono = "0.4.41"
reqwest = "0.12.23"
rustc-hash = "2.1.1"
itertools = "0.14.0"
regex = "1"
bio = "2.3.0"

[[bin]]
name = "seqdupes"
path = "src/main.rs"

[profile.release]
lto = "fat"
codegen-units = 1
debug = 1
