[package]
name = "seqdupes"
version = "0.3.0"
authors = ["Steven Weaver <steven@stevenweaver.org>"]
edition = "2021"
license = "MIT"
description = "Compress sequence duplicates"
repository = "https://github.com/stevenweaver/seqdupes"
homepage = "https://stevenweaver.org"
keywords = ["fastq", "fasta"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.57"
serde_json = "1.0.149"
bio = "3.0.0"
rustc-hash = "2.1.1"
flate2 = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "seqdupes"
path = "src/main.rs"

[profile.release]
lto = "fat"
codegen-units = 1
debug = 1
